--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@ body {
   display: flex;
   place-items: center;
   min-width: 420px;
-  min-height: 100vh;
+  min-height: 10vh;
 }
 
 h1 {
@@ -36,7 +36,7 @@ h1 {
 }
 
 button {
-  border-radius: 4px;
+  border-radius: 0px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
@@ -47,22 +47,10 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #ffffff;
+  border-color: #000000;
 }
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
