--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,28 @@
 .card {
   padding: 1em;
 }
-
+.yes {
+  border-radius: 0px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #00a808;
+  cursor: pointer;
+  transition: border-color 0.25s;
+}
+.no {
+  border-radius: 0px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #e22727;
+  cursor: pointer;
+  transition: border-color 0.25s;
+}
 .read-the-docs {
   color: #888;
 }
