--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,8 @@
 
   color-scheme: light dark;
   color: rgb(255, 255, 255);
-  background-color: #ffb0ff;
-
+  background-color: #f9bcff;
+  transition: background-color 2.0s;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -21,8 +21,8 @@ a {
 a:hover {
   color: #535bf2;
 }
-
 body {
+  font-family: 'VT323', monospace;
   margin: 0;
   display: flex;
   place-items: center;
@@ -31,10 +31,13 @@ body {
 }
 
 h1 {
-  font-size: 2.5em;
-  line-height: 0.6;
+  font-size: 3.5em;
+  line-height: 0.0;
 }
-
+h2 {
+  font-size: 2.5em;
+  line-height: 0.0;
+}
 button {
   border-radius: 0px;
   border: 1px solid transparent;
@@ -47,7 +50,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #000000;
+  border-color: #ffffff63;
 }
 button:focus,
 button:focus-visible {
