--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,8 @@
   transition: background-color 2.0s;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
 }
 
 a {
@@ -26,17 +26,27 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 759px;
+  min-width: 800px;
+  width: 100%;
   min-height: 10vh;
+  white-space: normal;
+  word-break: normal;
+  overflow-wrap: break-word;
 }
 
 h1 {
   font-size: 3.5em;
   line-height: 0.0;
+  white-space: normal;
+  word-break: normal;
+  overflow-wrap: break-word;
 }
 h2 {
-  font-size: 2.5em;
+  font-size: 1.5em;
   line-height: 0.0;
+  white-space: normal;
+  word-break: normal;
+  overflow-wrap: break-word;
 }
 button {
   border-radius: 0px;
