--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,7 @@ body {
   display: flex;
   place-items: center;
   min-width: 1000px;
+  max-width: 1000px;
   width: 100%;
   min-height: 10vh;
   white-space: normal;
